Give EventHandler an eventLoop to disallow simultaneous moves

--- a/3D_cube.html
+++ b/3D_cube.html
@@ -14,9 +14,9 @@
 	<body>
 
 		<script src="./three.min.js"></script>
-		<script type="application/javascript" src="test_cube.js"></script>
-		<script type="application/javascript" src="test_game.js"></script>
-		<script type="application/javascript" src="test_event_handler.js"></script>
+		<script type="application/javascript" src="3D_cube.js"></script>
+		<script type="application/javascript" src="3D_game.js"></script>
+		<script type="application/javascript" src="3D_event_handler.js"></script>
 
 		<script>
 			var camera, scene, renderer;
