Add basic title

--- a/3D_cube.html
+++ b/3D_cube.html
@@ -12,6 +12,9 @@
 		</style>
 	</head>
 	<body>
+		<h1 style="color: white; margin: 30px; font-size: 64px; position: absolute;">
+			RUBIK'S CUBE
+		</h1>
 
 		<script src="./three.min.js"></script>
 		<script type="application/javascript" src="3D_cube.js"></script>
