Clear eventLoop and clear triggerEvent interval upon cube completion

--- a/3D_cube.html
+++ b/3D_cube.html
@@ -24,6 +24,7 @@
 		<script src="./jquery-2.1.4.min.js"></script>
 		<script src="./three.min.js"></script>
 		<script type="application/javascript" src="3D_cube.js"></script>
+		<script type="application/javascript" src="cube.js"></script>
 		<script type="application/javascript" src="3D_game.js"></script>
 		<script type="application/javascript" src="3D_event_handler.js"></script>
 
