--- a/3D_cube.html
+++ b/3D_cube.html
@@ -18,7 +18,7 @@
 
 		<h2 style="color: white; margin: 30px; font-size: 48px; position: absolute; margin-top: 400px;">
 			TIMER
-			<small class="timer"></small>
+			<small class="timer">0.00</small>
 		</h2>
 
 		<script src="./jquery-2.1.4.min.js"></script>
