Allow for more moves once cube is solved

--- a/3D_cube.html
+++ b/3D_cube.html
@@ -13,7 +13,8 @@
 	</head>
 	<body>
 		<h1 style="color: white; margin: 30px; font-size: 64px; position: absolute;">
-			RUBIK'S CUBE
+			RUBIK'S CUBE<br>
+			<small>Press Enter to solve</small>
 		</h1>
 
 		<h2 style="color: white; margin: 30px; font-size: 48px; position: absolute; margin-top: 400px;">
