--- a/3D_cube.html
+++ b/3D_cube.html
@@ -17,6 +17,11 @@
 			<small>Press Enter to solve</small>
 		</h1>
 
+		<h1 style="color: white; margin: 20px; font-size: 64px; float: right; margin-right: 200px; margin-bottom: 0px;">
+			TO SOLVE:<br>
+			<small class="solve-moves" style="right: 200px;"></small>
+		</h1>
+
 		<h2 style="color: white; margin: 30px; font-size: 48px; position: absolute; margin-top: 400px;">
 			<small class="timer">0.00</small>
 		</h2>
