Position text as absolute, otherwise three.js breaks

--- a/3D_cube.html
+++ b/3D_cube.html
@@ -17,7 +17,7 @@
 			<small>Press Enter to solve</small>
 		</h1>
 
-		<h1 style="color: white; margin: 20px; font-size: 64px; float: right; margin-right: 200px; margin-bottom: 0px;">
+		<h1 style="color: white; font-size: 64px; position: absolute; right: 300px;">
 			TO SOLVE:<br>
 			<small class="solve-moves" style="right: 200px;"></small>
 		</h1>
