Refactor EventHandler#scramble

--- a/3D_cube.html
+++ b/3D_cube.html
@@ -19,7 +19,7 @@
 
 		<h1 style="color: white; font-size: 64px; position: absolute; right: 300px;">
 			TO SOLVE:<br>
-			<small class="solve-moves" style="right: 200px;"></small>
+			<small class="solve-moves" style="font-size: 40px; right: 200px;"></small>
 		</h1>
 
 		<h2 style="color: white; margin: 30px; font-size: 48px; position: absolute; margin-top: 400px;">
