Move styling to style.css

--- a/3D_cube.html
+++ b/3D_cube.html
@@ -10,19 +10,19 @@
 				overflow: hidden;
 			}
 		</style>
+		<link rel=StyleSheet href="style.css" type="text/css" media=screen>
 	</head>
 	<body>
-		<h1 style="color: white; margin: 30px; font-size: 64px; position: absolute;">
+		<h1 class="title">
 			RUBIK'S CUBE<br>
-			<small>Press Enter to solve</small>
 		</h1>
 
-		<h1 style="color: white; font-size: 64px; position: absolute; right: 300px;">
+		<h1 class="solve">
 			TO SOLVE:<br>
-			<small class="solve-moves" style="font-size: 40px; right: 200px;"></small>
+			<small class="solve-moves"></small>
 		</h1>
 
-		<h2 style="color: white; margin: 30px; font-size: 48px; position: absolute; margin-top: 400px;">
+		<h2>
 			<small class="timer">0.00</small>
 		</h2>
 
