Show instructions sidebar

--- a/3D_cube.html
+++ b/3D_cube.html
@@ -26,6 +26,25 @@
 			<small class="timer">0.00</small>
 		</h2>
 
+		<div class="instructions">
+			<h1>How to play:</h1>
+			<p>
+				KEYBOARD INSTRUCTIONS<br>
+				Space: scramble<br>
+				i, k: move right face<br>
+				f, j: move up face<br>
+				e, d: move left face<br>
+				s, l: move down face<br>
+				g, h: move front face<br>
+				q, p: move back face<br>
+				a: look left<br>
+				semi-colon: look right<br>
+				y: look down<br>
+				n: look up<br>
+				Enter: auto-solve
+			</p>
+		</div>
+
 		<script src="./jquery-2.1.4.min.js"></script>
 		<script src="./three.min.js"></script>
 		<script src="http://mrdoob.github.com/three.js/examples/fonts/helvetiker_regular.typeface.js"></script>
