--- a/3D_cube.html
+++ b/3D_cube.html
@@ -29,6 +29,11 @@
 		<div class="instructions">
 			<h1>How to play:</h1>
 			<p>
+				MOUSE INSTRUCTIONS<br>
+				Click on face and drag to move<br>
+				Click off face to rotate
+			</p>
+			<p>
 				KEYBOARD INSTRUCTIONS<br>
 				Space: scramble<br>
 				i, k: move right face<br>
@@ -41,7 +46,7 @@
 				semi-colon: look right<br>
 				y: look down<br>
 				n: look up<br>
-				Enter: auto-solve
+				Enter: auto-solve!
 			</p>
 		</div>
 
