Style sample solve and solution buttons

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</div>
 
 		<h1 class="solve begin">
-			Click me to see solution!<br>
+			Click me to see the solution!<br>
 		</h1>
 
 		<div class="sample begin">
@@ -71,7 +71,7 @@
 			$('.timer').text('0.00');
 			$('.timer').removeClass('begin');
 			$('.sample').removeClass('begin');
-			
+
 			setInterval(function (i) {
 				var colors = ['red', 'yellow', 'blue', 'green', 'orange', 'purple'];
 				var i = ~~(Math.random() * colors.length);
