Minor change to instructions layout

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 			</p>
 			<p>
 				KEYBOARD INSTRUCTIONS<br>
-				Space: scramble<br>
 				i, k: move right face<br>
 				f, j: move up face<br>
 				e, d: move left face<br>
@@ -41,7 +40,9 @@
 				semi-colon: look right<br>
 				y: look down<br>
 				n: look up<br>
-				Enter: auto-solve!
+				<br>
+				Space: scramble<br>
+				Enter: auto-solve!<br>
 			</p>
 		</div>
 
