Change example solve text to something less confusing

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<small class="solve-moves begin"></small>
 
 		<div class="sample begin">
-			Click me to see me solve it myself!
+			Click me to see an example solve!
 		</div>
 		<script src="./jquery-2.1.4.min.js"></script>
 		<script src="./three.min.js"></script>
