--- a/2D_cube.html
+++ b/2D_cube.html
@@ -1,9 +1,9 @@
 <html>
  <head>
   <meta charset="utf-8"/>
-  <script type="application/javascript" src="cube.js"></script>
-  <script type="application/javascript" src="game.js"></script>
-  <script type="application/javascript" src="event_handler.js"></script>
+  <script type="application/javascript" src="2D_cube.js"></script>
+  <script type="application/javascript" src="2D_game.js"></script>
+  <script type="application/javascript" src="2D_event_handler.js"></script>
 
   <script type="application/javascript">
     function init () {
