--- a/index.html
+++ b/index.html
@@ -89,33 +89,33 @@
         for (var j = 0; j < 9; j++) {
   				var geometry = new THREE.BoxGeometry( 100, 100, 100 );
 
-					//Color each individual cube:
-					//Color right face RED
+					// Color each individual cube:
+					// Color right face RED
 					geometry.faces[0].color.setRGB(255/255,0/255,0/255);
 					geometry.faces[1].color.setRGB(255/255,0/255,0/255);
-					//Color left face ORANGE
+					// Color left face ORANGE
 					geometry.faces[2].color.setRGB(255/255,101/255,0/255);
 					geometry.faces[3].color.setRGB(255/255,101/255,0/255);
-					//Color top face YELLOW
+					// Color top face YELLOW
 					geometry.faces[4].color.setRGB(255/255,255/255,0/255);
 					geometry.faces[5].color.setRGB(255/255,255/255,0/255);
-					//Color down face WHITE
+					// Color down face WHITE
 					geometry.faces[6].color.setRGB(255/255,255/255,255/255);
 					geometry.faces[7].color.setRGB(255/255,255/255,255/255);
-					//Color front face BLUE
+					// Color front face BLUE
 					geometry.faces[8].color.setRGB(0/255,0/255,255/255);
 					geometry.faces[9].color.setRGB(0/255,0/255,255/255);
-					//Color back face GREEN
+					// Color back face GREEN
 					geometry.faces[10].color.setRGB(0/255,255/255,0/255);
 					geometry.faces[11].color.setRGB(0/255,255/255,0/255);
 
-					//Create 3 mini-cubes and position along z-axis
+					// Create 3 mini-cubes and position along z-axis
 					for (var k = 0; k < 3; k++) {
 	          var material = new THREE.MeshBasicMaterial({ color: 0xffffff, vertexColors: THREE.FaceColors } );
 	  				mesh = new THREE.Mesh( geometry, material );
 	          mesh.position.set(103 -103 * ~~(j / 3), 103 -103 * (j % 3), 103 - 103 * k);
 
-						//Create mini-cube border
+						// Create mini-cube border
 						var helper = new THREE.EdgesHelper( mesh, 0x000000 );
 						helper.material.linewidth = 10;
 
@@ -124,7 +124,6 @@
 						scene.add(helper);
 						scene.add(mesh);
 					}
-
         }
 
 				camera.position.x += 250;
@@ -132,7 +131,7 @@
 				camera.position.z -= 100;
 				camera.lookAt(cubes[13].position); // look at middle of Rubik's Cube
 
-				rubiksCube = new Game.Cube(scene, camera, cubes);
+				window.rubiksCube = new Game.Cube(scene, camera, cubes);
 				eventHandler = new Game.EventHandler(rubiksCube, 'game');
 			}
 
@@ -160,6 +159,8 @@
 					}
 					$('.title').css('color', colors[i]);
 				}, 5000);
+
+				$(window).resize(onWindowResize);
 			}
 
 			function onWindowResize() {
