Change button text

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 				<p>Enter -- display solve moves</p>
 			</div>
 
-			<div class="button">
+			<div class="scramble button">
 				Scramble<br>
 			</div>
 
-			<div class="button">
+			<div class="sample button">
 				Example solve
 			</div>
 
