--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel=StyleSheet href="style.css" type="text/css" media=screen>
 		<script src="./jquery-2.1.4.min.js"></script>
 		<script src="./three.min.js"></script>
+		<script src="./threex.domevents.js"></script>
 		<script src="http://mrdoob.github.com/three.js/examples/fonts/helvetiker_regular.typeface.js"></script>
 		<script type="application/javascript" src="2D_cube.js"></script>
 		<script type="application/javascript" src="3D_cube.js"></script>
@@ -60,10 +61,9 @@
 			var canvasHeight = $('#canvas').height();
 
 			var camera, scene, renderer;
-			var mesh;
+			// var mesh;
 			var rubiksCube, eventHandler;
 			var cubes = [];
-			var solvedCubes = [];
 
 			init();
 			addEvents();
@@ -73,7 +73,7 @@
 				container = document.getElementById('canvas');
 				document.body.appendChild(container);
 
-				//setup scene
+				// Setup scene
 				renderer = new THREE.WebGLRenderer();
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( canvasWidth, canvasHeight );
@@ -82,7 +82,7 @@
 				camera.position.z = 600;
 				scene = new THREE.Scene();
 
-				//Make individual cube geometry
+				// Make individual cube geometry
         for (var j = 0; j < 9; j++) {
   				var geometry = new THREE.BoxGeometry( 100, 100, 100 );
 
@@ -108,16 +108,23 @@
 
 					// Create 3 mini-cubes and position along z-axis
 					for (var k = 0; k < 3; k++) {
-	          var material = new THREE.MeshBasicMaterial({ color: 0xffffff, vertexColors: THREE.FaceColors } );
-	  				mesh = new THREE.Mesh( geometry, material );
-	          mesh.position.set(103 -103 * ~~(j / 3), 103 -103 * (j % 3), 103 - 103 * k);
+	          var material = new THREE.MeshBasicMaterial({
+							color: 0xffffff,
+							vertexColors: THREE.FaceColors
+						});
+
+	  				var mesh = new THREE.Mesh(geometry, material);
+	          mesh.position.set(
+							103 -103 * ~~(j / 3),
+							103 -103 * (j % 3),
+							103 - 103 * k
+						);
 
 						// Create mini-cube border
 						var helper = new THREE.EdgesHelper( mesh, 0x000000 );
 						helper.material.linewidth = 10;
 
 						cubes.push(mesh);
-						solvedCubes.push(mesh);
 						scene.add(helper);
 						scene.add(mesh);
 					}
