Restyle instructions, fix canvas click-drag issue

--- a/index.html
+++ b/index.html
@@ -15,28 +15,60 @@
 	<body>
 		<div id="canvas"></div>
 
-		<div class="title">
-			Rubik's Cube
-		</div>
-
 		<div id="sidebar">
+			<div class="title">
+				Rubik's Cube
+			</div>
 			<div class="instructions">
-				<span class="section">KEYBOARD</span>
-				<p>i, k -- move right face</p>
-				<p>f, j -- move up face</p>
-				<p>e, d -- move left face</p>
-				<p>s, l -- move down face</p>
-				<p>g, h -- move front face</p>
-				<p>q, p -- move back face</p>
-				<p>a -- look left</p>
-				<p>; -- look right</p>
-				<p>y -- look down</p>
-				<p>n -- look up</p>
+
+				<div class="section">MOUSE INSTRUCTIONS</div>
+				Click and Drag.
+
+				<div class="section">KEYBOARD INSTRUCTIONS</div>
+				<p>
+					<div class="left">i, k</div>
+					-- move right face
+				</p>
+				<p>
+					<div class="left">f, j</div>
+					-- move up face
+				</p>
+				<p>
+					<div class="left">e, d</div>
+					-- move left face
+				</p>
+				<p>
+					<div class="left">s, l</div>
+					-- move down face
+				</p>
+				<p>
+					<div class="left">g, h</div>
+					-- move front face
+				</p>
+				<p>
+					<div class="left">q, p</div>
+					-- move back face
+				</p>
+				<p>
+					<div class="left">a</div>
+					-- look left
+				</p>
+				<p>
+					<div class="left">;</div>
+					-- look right
+				</p>
+				<p>
+					<div class="left">y</div>
+					-- look down
+				</p>
+				<p>
+					<div class="left">n</div>
+					-- look up
+				</p>
 
 				<br>
-
-				<p>Space -- scramble / solve</p>
-				<p>Enter -- display solve moves</p>
+				<p><div class="left">Space</div> -- scramble / solve</p>
+				<p><div class="left">Enter</div> -- display solve moves</p>
 			</div>
 
 			<div class="scramble button">
