--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 				0.00
 			</div>
 
-			<div class="solve-moves"></div>
+			<div class="solve-moves list"></div>
+			<div class="undo-moves list"></div>
 		</div>
 
 		<script>
