Give names to each cubie

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 							103 -103 * (j % 3),
 							103 - 103 * k
 						);
+						mesh.name = "cubie"; // easy for id-ing when raycasting
 
 						// Create mini-cube border
 						var helper = new THREE.EdgesHelper( mesh, 0x000000 );
