--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<script src="./three.min.js"></script>
 		<script type="application/javascript" src="init.js"></script>
 		<script type="application/javascript" src="addEvents.js"></script>
-		<script type="application/javascript" src="3D_cube.js"></script>
-		<script type="application/javascript" src="3D_event_handler.js"></script>
+		<script type="application/javascript" src="cube.js"></script>
+		<script type="application/javascript" src="event_handler.js"></script>
 	</head>
 	<body>
 		<div id="canvas"></div>
