Require correct files

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 		<link rel=StyleSheet href="style.css" type="text/css">
 		<script src="./jquery-2.1.4.min.js"></script>
 		<script src="./three.min.js"></script>
+		<script type="application/javascript" src="cube.js"></script>
+		<script type="application/javascript" src="solve.js"></script>
 		<script type="application/javascript" src="init.js"></script>
 		<script type="application/javascript" src="addEvents.js"></script>
-		<script type="application/javascript" src="cube.js"></script>
+		<script type="application/javascript" src="rubiks_cube.js"></script>
 		<script type="application/javascript" src="event_handler.js"></script>
 	</head>
 	<body>
@@ -42,7 +44,7 @@
 			<div class="scramble button">Scramble</div>
 			<div class="sample button">Example solve</div>
 			<div class="timer">0.00</div>
-			
+
 			<div class="solve-moves list"></div>
 			<div class="undo-moves list"></div>
 		</div>
